--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -38,18 +38,15 @@
                 <label for="signUpConfirmPassword">Confirm Password:</label>
                 <input type="password" class="formInput" id="signUpConfirmPassword">
             </div>
+            <form action="/action_page.php">
+                <label for="img">Select Profile Picture:</label>
+                <input type="file" id="avatarPic" name="avatarPic" accept="image/*">
+            </form>
             <div class="signUpGrouping">
                 <button class="signUpButton" type="submit">Sign Up</button>
             </div>
         </form>
     </section>
 
-
-
-
-
-
-
 </div>
 
-{{!-- Use the class GitLab 14. MVC - Stu 16  --}}
