--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -20,7 +20,7 @@
           <span>{{event.date}}</span>
         </div>
         <div>
-          <span><!-- helper code to calculate {{}} -->00 / {{event.max-users}}</span>
+          <span><!-- helper code to calculate {{}} -->00 / {{event.max_users}}</span>
         </div>
       </div>
     </article>
