--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Table</title>
+  <link rel="stylesheet" href="./css/reset.ss">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <header>
