--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <img src="" alt="The Table Logo">
+    <img class="logo" src="./images/thetable_logo.svg" alt="The Table Logo">
     <nav>
       <div>
         <a href="/">Home</a>
