--- a/views/create-event.handlebars
+++ b/views/create-event.handlebars
@@ -1,8 +1,35 @@
 <div>
     <h1>Start a Game?</h1>
-    <input type="text">Name the Event</input>
+    <input type="text" placeholder="Name the Event" id="eventTitle"></input>
+    <!-- event photo input -->
     <form action="/action_page.php">
         <input type="file" id="eventPic" name="eventPic">
-        <input type="submit">
+        <p>Choose Event Photo</p>
     </form>
+    <!-- dropdown menu for game choices -->
+    <label for="game-choices">Choose a Game:</label>
+    <select name="game-choices" id="game-choices">
+        <option value="game1">Game 1</option>
+        <option value="game2">Game 2</option>
+        <option value="game3">Game 3</option>
+        <option value="na">N/A</option>
+    </select>
+    <input type="text" placeholder="Add Custom Game" id="gameCustomChoice"></input>
+    <input type="text" placeholder="Event Description" id="eventDescription"></input>
+    <input type="text" placeholder="Add Notes (Example: BYOB)" id="eventNotes"></input>
+    <!-- Calendar for choosing the date -->
+    <fieldset id="eventDate">
+        <legend>Pick the Date</legend>
+        <label for="eventDate">
+            <input id="eventDate"type="date" min="2023-02-01">
+        </label>
+    </fieldset>
+    <fieldset id="eventTime">
+        <legend>Pick the Time</legend>
+        <label for="eventTime">
+            <input id="eventTime"type="time">
+        </label>
+    </fieldset>
+
+
 </div>
