added comments so i can look up how to add date and time placeholders

--- a/views/create-event.handlebars
+++ b/views/create-event.handlebars
@@ -19,15 +19,17 @@
     <input type="text" placeholder="Add Notes (Example: BYOB)" id="eventNotes"></input>
     <!-- Calendar for choosing the date -->
     <fieldset id="eventDate">
-        <legend>Pick the Date</legend>
+        <legend>Pick the Date:</legend>
         <label for="eventDate">
+            {{!-- TODO: Placeholder for a date --}}
             <input id="eventDate"type="date" min="2023-02-01">
         </label>
     </fieldset>
     <fieldset id="eventTime">
-        <legend>Pick the Time</legend>
+        <legend>Pick the Time:</legend>
         <label for="eventTime">
-            <input id="eventTime"type="time">
+            {{!-- TODO: Placeholder for a time --}}
+            <input id="eventTime" type="time">
         </label>
     </fieldset>
 
