Added missing class

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
           <span>Physical Only</span>
           <span>Not Full</span>
           <span class="filter-container">By Game</span>
-          <div>
+          <div class="hidden">
             <input type="text" name="filter-by-game" id="filter-by-game">
           </div>
           <span class="filter-container">By Tag</span>
