Added hidden class to filter list

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
       </div>
       <div id="nav-filter">
         <button>Filter</button>
-        <div>
+        <div class="hidden">
           <span class="filter-container">By Date</span>
           <div id="filter-by-date" class="hidden">
             <span>Within 7 Days</span>
