--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,14 +15,17 @@
 }
 
 body {
+  min-height: 100vh;
+  margin: 0;
   background-color: var(--color-bg);
-  width: 100%;
+  max-width: 64rem;
+  border: 1px solid red;
 }
 
 /* Nav Styles */
 header {
   height: 8.5rem;
-  width: 100%;
+  width: 1024px;
   position: fixed;
   background-color: var(--color-secondary);
   color: var(--color-on-secondary);
@@ -38,13 +41,25 @@ header {
 }
 
 nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  width: 100%;
+  align-self: center;
+  display: grid;
+  grid-template-columns: 75% 25%;
+}
+
+.nav-links {
+  font-size: 3rem;
+  font-weight: 400;
 }
 
 #nav-filter {
   width: 5rem;
+}
+
+#nav-filter button {
+  font-size: 2.5rem;
+  font-weight: 400;
+  border-radius: var(--border-radius);
 }
 
 /* Event Card Styles */
