--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<section>
+<section class="content-container">
   {{#each events as |event|}}
     <article>
       <div class="card-container-title">
