Added event classes to handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
-<section class="content-container">
+<section id="event-container" class="content-container">
   {{#each events as |event|}}
-    <article>
+    <article class="event-card">
       <div class="card-container-title">
         <h2>{{event.name}}</h2>
       </div>
