--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,9 +11,9 @@
       <div class="card-container-footer">
         <div>
           {{#if event.is_virtual}}
-            <img src="" alt="virtual link">
+            <img src="./images/virtual-icon.svg" alt="virtual link">
           {{else}}
-            <img src="" alt="physical location">
+            <img src="./images/physical-icon.svg" alt="physical location">
           {{/if}}
         </div>
         <div>
