added the id to the handlebars to fit with the mainpage

--- a/views/create-event.handlebars
+++ b/views/create-event.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div id="content-container">
     <h1>Start a Game?</h1>
     <input type="text" placeholder="Name the Event" id="eventTitle"></input>
     <!-- event photo input -->
