--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div>
+<div id="content-container">
     {{!-- Card for returning users to enter log in information --}}
     <section class="loginCard">
         <h2 class="cardTitle">Login</h2>
