Fixed else syntax error

--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -51,7 +51,7 @@
     {{/if}}
     {{#if event.host_id=session.userId}}
       <button id="add-attendees">Add Members</button>
-    {{#else}}
+    {{else}}
       <button id="leave-event">Leave Event</button>
     {{/if}}
   </article>
