--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -1,7 +1,7 @@
 <section id="event-container" class="content-container">
   <article data-id="{{event.id}}" class="event-page">
     <h2 id="event-title">{{event.name}}</h2>
-    {{#if event.host_id=session.userId}}
+    {{#if event.host_id}}
       <button id="edit-event">Edit Event</button>
       <button id="cancel-event">Cancel Event</button>
     {{/if}}
@@ -41,15 +41,15 @@
       </div>
     </div>
     {{#if event.is_virtual}}
-      <img src="./images/physical-icon.svg" alt="house icon">
-    {{#else}}
-      <img src="./images/virtual-icon.svg" alt="computer icon">
+      <img src="/images/physical-icon.svg" alt="house icon">
+    {{else}}
+      <img src="/images/virtual-icon.svg" alt="computer icon">
     {{/if}}
     <span id="event-dop">Date of Play: {{event.date}}</span>
     {{#if event.is_public}}
       <img src="" alt="private icon">
     {{/if}}
-    {{#if event.host_id=session.userId}}
+    {{#if event.host_id}}
       <button id="add-attendees">Add Members</button>
     {{else}}
       <button id="leave-event">Leave Event</button>
