--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -1,7 +1,7 @@
 <section id="event-container" class="content-container">
   <article data-id="{{event.id}}" class="event-page">
     <h2 id="event-title">{{event.name}}</h2>
-    {{#if event.host_id}}
+    {{#if event.host_id=session.userId}}
       <button id="edit-event">Edit Event</button>
       <button id="cancel-event">Cancel Event</button>
     {{/if}}
@@ -49,7 +49,7 @@
     {{#if event.is_public}}
       <img src="" alt="private icon">
     {{/if}}
-    {{#if event.host_id}}
+    {{#if event.host_id=session.userId}}
       <button id="add-attendees">Add Members</button>
     {{else}}
       <button id="leave-event">Leave Event</button>
