Added event-card class

--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -1,5 +1,5 @@
 <section id="event-container" class="content-container">
-  <article data-id="{{event.id}}" class="event-page">
+  <article data-id="{{event.id}}" class="event-page event-card">
     <h2 id="event-title">{{event.name}}</h2>
     {{#if event.host_id=session.userId}}
       <button id="edit-event">Edit Event</button>
