--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
-<div id="content-container">
+<div class="content-container">
     {{!-- Card for returning users to enter log in information --}}
-    <section class="loginCard">
+    <section class="loginCard event-card">
         <h2 class="cardTitle">Login</h2>
         <form class="loginForms">
             <div class="loginGrouping">
@@ -19,7 +19,7 @@
 
     {{!-- Card for new user to sign up --}}
 
-     <section class="signUpCard">
+     <section class="signUpCard event-card">
         <h2 class="cardTitle">Register</h2>
         <form class="signUpForms">
             <div class="signUpGrouping">
