--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -25,4 +25,38 @@
         {{/each}}
     </div>
 
+
+    <div id="ChangePassword" class="" >
+        <div class="cardStyle">
+            <form action="" method="post" name="signupForm" id="signupForm">
+        
+                {{!-- <img src="" id="signupLogo" /> --}}
+        
+                <h2 class="formTitle">
+                    Change Password
+                </h2>
+        
+                <div class="inputDiv">
+                    <label class="inputLabel" for="password">New Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+        
+                <div class="inputDiv">
+                    <label class="inputLabel" for="confirmPassword">Confirm Password</label>
+                    <input type="password" id="confirmPassword" name="confirmPassword">
+                </div>
+        
+                <div class="buttonWrapper">
+                    <button type="submit" id="submitButton" onclick="validateSignupForm()"
+                        class="submitButton pure-button pure-button-primary">
+                        <span>Speak Friend and Enter</span>
+                        <span id="loader"></span>
+                    </button>
+                </div>
+        
+            </form>
+        </div>
+    
+       
+    </div>
 </div>
