--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -28,7 +28,7 @@
 
     <div id="ChangePassword" class="" >
         <div class="cardStyle">
-            <form action="" method="post" name="signupForm" id="signupForm">
+            <form name="signupForm" id="signupForm">
         
                 {{!-- <img src="" id="signupLogo" /> --}}
         
@@ -47,8 +47,7 @@
                 </div>
         
                 <div class="buttonWrapper">
-                    <button type="submit" id="submitButton" onclick="validateSignupForm()"
-                        class="submitButton pure-button pure-button-primary">
+                    <button type="submit" id="submitButton" class="submitButton pure-button pure-button-primary">
                         <span>Speak Friend and Enter</span>
                         <span id="loader"></span>
                     </button>
@@ -56,6 +55,31 @@
         
             </form>
         </div>
+
+        <div id="ChangeDisplayName" class="">
+            <div class="cardStyle">
+                <form name="signupForm" id="signupForm">
+        
+                    {{!-- <img src="" id="signupLogo" /> --}}
+        
+                    <h2 class="formTitle">
+                        Change your Display Name
+                    </h2>
+        
+                    <div class="inputDiv">
+                        <label class="inputLabel" for="password">Change Display Name</label>
+                        <input type="password" id="displayname" name="password" required>
+                    </div>
+        
+                    <div class="buttonWrapper">
+                        <button type="submit" id="newNameButton" class="submitButton pure-button pure-button-primary">
+                            <span>Change To a Name Your Ancestors Would be Proud Of</span>
+                            <span id="loader"></span>
+                        </button>
+                    </div>
+        
+                </form>
+            </div>
     
        
     </div>
