Updated some classes

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,4 +1,4 @@
-<section id="content-container">
+<section class="content-container event-card">
   <!-- Events with pending invite requests -->
   <div id="pending-invites">
     <span>Attendance Requests Pending</span>
