--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
       <div class="nav-links">
         <a href="/">Home</a>
         {{#if loggedIn}}
-          <a href="api/users/{{userId}}/account">Account</a>
+          <a href="/api/users/{{userId}}/account">Account</a>
           <a href="/create-event">Host Event</a>
           <a href="/logout">Logout</a>
         {{else}}
