--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
         {{#if loggedIn}}
           <a href="/api/users/{{userId}}/account">Account</a>
           <a href="/create-event">Host Event</a>
-          <a href="/logout">Logout</a>
+          <a href="/api/users/logout">Logout</a>
         {{else}}
           <a href="/login">Login</a>
         {{/if}}
