--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -1,4 +1,4 @@
-<section id="event-container" class="content-container">
+<section id="event-page-container" class="content-container">
   <article data-id="{{event.id}}" class="event-page event-card">
     <h2 id="event-title">{{event.name}}</h2>
     {{#ifEquals event.host_id userId}}
