Updated to remove friends list for now

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -70,9 +70,9 @@
     </nav>
   </header>
   <aside id="friends-list-container">
-    <h3>Friends List</h3>
+    <!--<h3>Friends List</h3>-->
     <div>
-      
+      <!--A friends list will eventually go there-->
     </div>
   </aside>
   {{{ body }}}
