--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,11 +69,13 @@ nav {
 /* Friends List Styles */
 aside {
   width: 16rem;
-  height: 80%;
+  /*height: 80%;*/
+  height: 100%;
   float: left;
   position: fixed;
   bottom: 1rem;
-  z-index: 2;
+  /*z-index: 2;*/
+  z-index: -1;
   background-color: var(--color-secondary);
   border-radius: var(--border-radius);
 }
