Fixed console log warning

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -38,7 +38,7 @@
   
   <div id="ChangePassword" class="" >
         <div class="cardStyle">
-            <form name="signupForm" id="signupForm">
+            <form name="signupForm">
         
                 {{!-- <img src="" id="signupLogo" /> --}}
         
@@ -68,7 +68,7 @@
         
         <div id="ChangeDisplayName" class="">
             <div class="cardStyle">
-                <form name="signupForm" id="signupForm">
+                <form name="signupForm">
         
                     {{!-- <img src="" id="signupLogo" /> --}}
         
