--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -35,8 +35,10 @@
       {{/each}}
     </div>
   </div>
+
+  <span onclick="changePassModal()">Change Screen Name or Password</span>
   
-  <div id="ChangePassword" class="" >
+  <div id="ChangePassword" class="ChangePassword hidden" >
         <div class="cardStyle">
             <form name="signupForm">
         
