--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -158,7 +158,7 @@ aside h3 {
 }
 
 /* change password modal styling */
-.ChangePassword {
+.account-modal {
   display: flex;
   min-height: 100%;
   align-items: center;
