Changed model close to icons

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -42,7 +42,7 @@
   <div id="ChangePassword" class="account-modal hidden">
     <div class="cardStyle">
       <!-- Close model button -->
-      <button onclick="changePassModal()">X</button>
+      <img src="/images/x-icon.svg" alt="x icon" onclick="changePassModal()">
       <form name="signupForm">
 
         {{!-- <img src="" id="signupLogo" /> --}}
@@ -75,7 +75,7 @@
   <div id="ChangeDisplayName" class="account-modal hidden">
     <div class="cardStyle">
       <!-- Close model button -->
-      <button onclick="changeNameModal()">X</button>
+      <img src="/images/check-icon.svg" alt="checkmark icon" onclick="changeNameModal()">
       <form name="signupForm">
 
         {{!-- <img src="" id="signupLogo" /> --}}
