--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -157,6 +157,11 @@ aside h3 {
   
 }
 
+/* Create Event Page Styles */
+.create-event-page {
+  display: block;
+}
+
 /* change password modal styling */
 .account-modal {
   display: flex;
