Added icon and fixed displayname

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -10,8 +10,8 @@
   </div>
 
   <div>
-    <h2 id="displayName">{{userData.displayName}}</h2>
-    <img src="" alt="mail device image">
+    <h2 id="displayName">{{user.displayname}}</h2>
+    <img src="/images/mail-tablet-icon.svg" alt="mail device image">
   </div>
   <!-- Events -->
   <div>
