Fixed wrong icon

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -75,7 +75,7 @@
   <div id="ChangeDisplayName" class="account-modal hidden">
     <div class="cardStyle">
       <!-- Close model button -->
-      <img src="/images/check-icon.svg" alt="checkmark icon" onclick="changeNameModal()">
+      <img src="/images/x-icon.svg" alt="x icon" onclick="changeNameModal()">
       <form name="signupForm">
 
         {{!-- <img src="" id="signupLogo" /> --}}
