Hid the filter button for development later

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,8 +24,9 @@
           <a href="/login">Login</a>
         {{/if}}
       </div>
+      <!-- TODO - Impliment filter -->
       <div id="nav-filter">
-        <button>Filter</button>
+        <button class="hidden">Filter</button>
         <div class="hidden">
           <span class="filter-container">By Date</span>
           <div id="filter-by-date" class="hidden">
