hid game-dropdown for later development

--- a/views/create-event.handlebars
+++ b/views/create-event.handlebars
@@ -9,6 +9,7 @@
     </form>
     -->
     <!-- dropdown menu for game choices -->
+    <!-- TODO - Implement pre-picked games later
     <label for="game-choices">Choose a Game:</label>
     <select name="game-choices" id="game-choices">
       <option value="game1">Game 1</option>
@@ -16,6 +17,7 @@
       <option value="game3">Game 3</option>
       <option value="na">N/A</option>
     </select>
+    -->
     <input type="text" placeholder="Add Custom Game" id="gameCustomChoice"></input>
     <textarea name="addDescription" id="eventDescription" cols="30" rows="10" placeholder="Event Description"></textarea>
     <textarea name="addNotes" id="eventNotes" cols="30" rows="10"placeholder="Add Notes (Example: BYOB)" ></textarea>
