--- a/views/edit-event.handlebars
+++ b/views/edit-event.handlebars
@@ -9,7 +9,7 @@
     </form>
     -->
     <!-- dropdown menu for game choices -->
-    <!--
+    <!-- TODO - Implement pre-picked games later
     <label for="game-choices">Choose a Game:</label>
     <select name="game-choices" id="game-choices">
       <option value="game1">Game 1</option>
